@@ -1,17 +1,16 @@
 package org.molgenis.emx2.sql;
 
 import static org.jooq.impl.DSL.name;
-import static org.molgenis.emx2.Privileges.*;
+import static org.molgenis.emx2.sql.MetadataUtils.*;
 import static org.molgenis.emx2.sql.SqlTableMetadataExecutor.executeDropTable;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.jooq.DDLQuery;
 import org.jooq.DSLContext;
 import org.jooq.Record;
 import org.jooq.exception.DataAccessException;
+import org.jooq.impl.DSL;
 import org.molgenis.emx2.*;
 
 class SqlSchemaMetadataExecutor {
@@ -21,73 +20,13 @@ class SqlSchemaMetadataExecutor {
   }
 
   static void executeCreateSchema(SqlDatabase db, SchemaMetadata schema) {
-    DDLQuery step = db.getJooq().createSchema(schema.getName());
-    step.execute();
-
-    String schemaName = schema.getName();
-    String exists = getRolePrefix(schemaName) + EXISTS;
-    String range = getRolePrefix(schemaName) + RANGE;
-    String aggregator = getRolePrefix(schemaName) + AGGREGATOR;
-    String count = getRolePrefix(schemaName) + COUNT;
-    String viewer = getRolePrefix(schemaName) + VIEWER;
-    String editor = getRolePrefix(schemaName) + EDITOR;
-    String manager = getRolePrefix(schemaName) + MANAGER;
-    String owner = getRolePrefix(schemaName) + OWNER;
-
-    db.addRole(exists);
-    db.addRole(range);
-    db.addRole(aggregator);
-    db.addRole(count);
-    db.addRole(viewer);
-    db.addRole(editor);
-    db.addRole(manager);
-    db.addRole(owner);
-
-    // grant range role also exists role
-    db.getJooq().execute("GRANT {0} TO {1}", name(exists), name(range));
-    // grant aggregator role also exists role
-    db.getJooq().execute("GRANT {0} TO {1}", name(range), name(aggregator));
-    // make counter also aggregator
-    db.getJooq().execute("GRANT {0} TO {1}", name(aggregator), name(count));
-    // make viewer also counter
-    db.getJooq().execute("GRANT {0} TO {1}", name(count), name(viewer));
-    // make editor also viewer
-    db.getJooq().execute("GRANT {0} TO {1}", name(viewer), name(editor));
-
-    // make manager also editor, viewer and aggregator
-    db.getJooq()
-        .execute(
-            "GRANT {0},{1},{2} TO {3} WITH ADMIN OPTION",
-            name(aggregator), name(viewer), name(editor), name(manager));
-
-    // make owner also editor, manager, member
-    db.getJooq()
-        .execute(
-            "GRANT {0},{1},{2},{3} TO {4} WITH ADMIN OPTION",
-            name(aggregator), name(viewer), name(editor), name(manager), name(owner));
-
-    String currentUser = db.getJooq().fetchOne("SELECT current_user").get(0, String.class);
-    String sessionUser = db.getJooq().fetchOne("SELECT session_user").get(0, String.class);
-
-    // make current user the owner
-    if (!sessionUser.equals(currentUser)) {
-      db.getJooq().execute("GRANT {0} TO {1}", name(manager), name(currentUser));
-    }
-
-    // make admin owner
-    db.getJooq().execute("GRANT {0} TO {1}", name(manager), name(sessionUser));
-
-    // grant the permissions
-    db.getJooq().execute("GRANT USAGE ON SCHEMA {0} TO {1}", name(schema.getName()), name(exists));
-    // grant the permissions
-    db.getJooq().execute("GRANT ALL ON SCHEMA {0} TO {1}", name(schema.getName()), name(manager));
+    db.getJooq().createSchema(schema.getName()).execute();
 
     MetadataUtils.saveSchemaMetadata(db.getJooq(), schema);
   }
 
   static void executeAddMembers(DSLContext jooq, Schema schema, Member member) {
     List<String> currentRoles = schema.getRoles();
-    List<Member> currentMembers = schema.getMembers();
 
     if (!currentRoles.contains(member.getRole())) {
       throw new MolgenisException(
@@ -98,47 +37,23 @@ class SqlSchemaMetadataExecutor {
               + "'. Existing roles are: "
               + currentRoles);
     }
-    String username = Constants.MG_USER_PREFIX + member.getUser();
-    String roleprefix = getRolePrefix(schema.getMetadata().getName());
-    String rolename = roleprefix + member.getRole();
 
-    // execute updates database
-    updateMembershipForUser(
-        jooq,
-        schema.getDatabase(),
-        schema.getMetadata(),
-        currentMembers,
-        member,
-        username,
-        rolename);
-  }
-
-  private static void updateMembershipForUser(
-      DSLContext jooq,
-      Database db,
-      SchemaMetadata schema,
-      List<Member> currentMembers,
-      Member m,
-      String username,
-      String rolename) {
-    try {
-      // add user if not exists
-      if (!db.hasUser(m.getUser())) {
-        db.addUser(m.getUser());
-      }
-
-      // revoke other roles if user has them
-      for (Member old : currentMembers) {
-        if (old.getUser().equals(m.getUser())) {
-          jooq.execute(
-              "REVOKE {0} FROM {1}",
-              name(getRolePrefix(schema.getName()) + old.getRole()), name(username));
-        }
-      }
-      jooq.execute("GRANT {0} TO {1}", name(rolename), name(username));
-    } catch (DataAccessException dae) {
-      throw new SqlMolgenisException("Add member failed", dae);
+    if (!schema.getDatabase().hasUser(member.getUser())) {
+      schema.getDatabase().addUser(member.getUser());
     }
+
+    // Trigger wil grant permissions
+    String groupName = schema.getName() + "/" + member.getRole();
+    jooq.update(GROUP_METADATA)
+        .set(
+            USERS,
+            DSL.when(
+                    DSL.not(DSL.condition("? = any(" + USERS + ")", member.getUser())),
+                    DSL.arrayAppend(USERS, member.getUser()))
+                .otherwise(USERS))
+        .where(GROUP_NAME.eq(groupName))
+        .execute();
+    jooq.execute("SELECT \"MOLGENIS\".refresh_user_permissions_mv()");
   }
 
   static String getRolePrefix(String name) {
@@ -149,31 +64,36 @@ class SqlSchemaMetadataExecutor {
     String roleFilter = getRolePrefix(schemaName);
     List<Record> roles =
         jooq.fetch(
-            "SELECT a.oid, a.rolname FROM pg_roles a WHERE pg_has_role({0}, a.oid, 'member') AND a.rolname LIKE {1}",
-            Constants.MG_USER_PREFIX + user, roleFilter + "%");
+            """
+                    SELECT gm.group_name as role, gm.users as members\s
+                        FROM "MOLGENIS".group_metadata gm
+                        JOIN "MOLGENIS".group_permissions gp ON gm.group_name = gp.group_name
+                    WHERE gp.table_schema = {0}
+                      AND {1} = ANY(gm.users);
+                    """,
+            schemaName, user);
     return roles.stream()
-        .map(r -> r.get("rolname", String.class).substring(roleFilter.length()))
-        .collect(Collectors.toList());
+        .map(r -> r.get("role", String.class).substring(roleFilter.length()))
+        .toList();
   }
 
   static List<Member> executeGetMembers(DSLContext jooq, SchemaMetadata schema) {
     List<Member> members = new ArrayList<>();
 
-    // retrieve all role members
-    String roleFilter = getRolePrefix(schema.getName());
-    String userFilter = Constants.MG_USER_PREFIX;
     List<Record> result =
         jooq.fetch(
-            "select distinct m.rolname as member, r.rolname as role"
-                + " from pg_catalog.pg_auth_members am "
-                + " join pg_catalog.pg_roles m on (m.oid = am.member)"
-                + "join pg_catalog.pg_roles r on (r.oid = am.roleid)"
-                + "where r.rolname LIKE {0} and m.rolname LIKE {1}",
-            roleFilter + "%", userFilter + "%");
+            """
+                SELECT gm.group_name as role, gm.users as members FROM "MOLGENIS".group_metadata gm
+                        JOIN "MOLGENIS".group_permissions gp ON gm.group_name = gp.group_name
+                        WHERE table_schema = {0} AND cardinality(gm.users) > 0;
+                """,
+            schema.getName());
     for (Record r : result) {
-      String memberName = r.getValue("member", String.class).substring(userFilter.length());
-      String roleName = r.getValue("role", String.class).substring(roleFilter.length());
-      members.add(new Member(memberName, roleName));
+      List<String> membersResult = r.getValue("members", List.class);
+      String roleName = r.getValue("role", String.class);
+      for (String member : membersResult) {
+        members.add(new Member(member, roleName));
+      }
     }
 
     return members;
@@ -186,16 +106,15 @@ class SqlSchemaMetadataExecutor {
       List<String> usernames = new ArrayList<>();
       for (Member m : members) usernames.add(m.getUser());
 
-      String userprefix = Constants.MG_USER_PREFIX;
-      String roleprefix = getRolePrefix(schema.getMetadata().getName());
-
       for (Member m : schema.getMembers()) {
         if (usernames.contains(m.getUser())) {
-
+          String groupName = m.getRole();
           db.getJooq()
-              .execute(
-                  "REVOKE {0} FROM {1}",
-                  name(roleprefix + m.getRole()), name(userprefix + m.getUser()));
+              .update(GROUP_METADATA)
+              .set(USERS, DSL.arrayRemove(USERS, m.getUser()))
+              .where(GROUP_NAME.eq(groupName))
+              .execute();
+          db.getJooq().execute("SELECT \"MOLGENIS\".refresh_user_permissions_mv()");
         }
       }
     } catch (DataAccessException dae) {
@@ -203,6 +122,7 @@ class SqlSchemaMetadataExecutor {
     }
   }
 
+  // TODO: get this form group_metadata?
   static List<String> executeGetRoles(DSLContext jooq, String schemaName) {
     List<String> result = new ArrayList<>();
     for (Record r :
@@ -240,6 +160,9 @@ class SqlSchemaMetadataExecutor {
                         });
               });
 
+      // update metadata before so policy triggers fire
+      MetadataUtils.deleteSchema(db.getJooq(), schemaName);
+
       // remove tables individually to trigger foreign key error if appropriate
       List<Table> tables = db.getSchema(schemaName).getTablesSorted();
       Collections.reverse(tables);
@@ -251,7 +174,6 @@ class SqlSchemaMetadataExecutor {
       for (String role : executeGetRoles(db.getJooq(), schemaName)) {
         db.getJooq().execute("DROP ROLE IF EXISTS {0}", name(getRolePrefix(schemaName) + role));
       }
-      MetadataUtils.deleteSchema(db.getJooq(), schemaName);
     } catch (Exception e) {
       throw new SqlMolgenisException("Drop schema failed", e);
     }
